Clean cmake files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,46 +1,51 @@
 cmake_minimum_required(VERSION 2.8)
 
 cmake_policy(SET CMP0015 NEW)
+cmake_policy(SET CMP0023 NEW)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra")
-
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_DEBUG}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -O3 -fPIC ")
 
 if(UNIX AND NOT APPLE)
    add_definitions(-DLINUX)
-   MESSAGE("..............LINUX SYSTEM..............")
+   message("..............LINUX SYSTEM..............")
 endif()
 
-
-if (NOT CMAKE_PROJECT_CONFIG)
+if(NOT CMAKE_PROJECT_CONFIG)
     set(CMAKE_PROJECT_CONFIG "esc")
-endif (NOT CMAKE_PROJECT_CONFIG)
-set (CONFIG_FILE "default_${CMAKE_PROJECT_CONFIG}.h.in" )
+endif(NOT CMAKE_PROJECT_CONFIG)
+
+set(CONFIG_FILE "default_${CMAKE_PROJECT_CONFIG}.h.in")
 project(${CMAKE_PROJECT_CONFIG})
 
-if(EXISTS ${CONFIG_FILE} )
+if(EXISTS ${CONFIG_FILE})
     message(FATAL_ERROR "Configuration file ${CONFIG_FILE} not exists")
     return()
-endif(EXISTS ${CONFIG_FILE})
-message("PROJECT CONFIG: " ${CMAKE_PROJECT_CONFIG} )
+endif()
+
+message("** PROJECT CONFIG: " ${CMAKE_PROJECT_CONFIG} " **")
 configure_file(${CONFIG_FILE} ${CMAKE_SOURCE_DIR}/common/default.h)
 
-IF(CMAKE_BUILD_TYPE MATCHES "Debug")
-add_definitions(-DDEBUG)
-ENDIF(CMAKE_BUILD_TYPE MATCHES "Debug")
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    add_definitions(-DDEBUG)
+endif()
 
-SET(CMAKE_CXX_FLAGS -pthread)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+
+if(CODE_COVERAGE)
+    message("** SOURCE CODE COVERAGE ENABLED **")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -g -O0 --coverage -fprofile-arcs -ftest-coverage ")
+endif()
 
 add_subdirectory(common)
 add_subdirectory(esc)
 add_subdirectory(escd)
 add_subdirectory(tools)
 
-IF(EXECUTE_LOCAL_TEST)
-MESSAGE("..............EXECUTE_LOCAL_TEST:         " ${EXECUTE_LOCAL_TEST} )
-install(FILES ../scripts/installesc.sh
-    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
-    DESTINATION bin)
-ENDIF()
+if(EXECUTE_LOCAL_TEST)
+    message("..............EXECUTE_LOCAL_TEST:         " ${EXECUTE_LOCAL_TEST})
+    install(FILES ../scripts/installesc.sh
+        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+        DESTINATION bin)
+endif()
