--- a/src/escd/commandhandler/CMakeLists.txt
+++ b/src/escd/commandhandler/CMakeLists.txt
@@ -25,6 +25,7 @@ SET (SOURCED
     ${CMAKE_CURRENT_SOURCE_DIR}/retrievefundshandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getvipkeyshandler.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/getblockshandler.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/logaccounthandler.cpp
     PARENT_SCOPE
     )
 
@@ -55,6 +56,7 @@ SET (HEADERSD
     ${CMAKE_CURRENT_SOURCE_DIR}/retrievefundshandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getvipkeyshandler.h
     ${CMAKE_CURRENT_SOURCE_DIR}/getblockshandler.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/logaccounthandler.h
     PARENT_SCOPE
     )
 
