--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ jobs:
     #    - mvn clean test -q -f pom-qa.xml -Ddir.data=$DATA_DIR -Dgenesis.file=$GENESIS_FILE -Dcucumber.options="--tags @transfer"
     - stage: test
       script:
-        - ./scripts/ads_configure.py --data=$DATA_DIR --esc=$BIN_DIR/esc --escd=$BIN_DIR/escd $GENESIS_FILE
+        - ./scripts/ads_configure.py --data_dir=$DATA_DIR --client=$BIN_DIR/esc --daemon=$BIN_DIR/escd --interface 127.0.0.1 $GENESIS_FILE
         - ./scripts/ads_ctl.py --data=$DATA_DIR --init --wait start
         - cd $TEST_DIR
         - mvn clean test -q -f pom-qa.xml -Ddir.data=$DATA_DIR -Dgenesis.file=$GENESIS_FILE -Dcucumber.options="--tags @broadcast"
