--- a/src/unittest/CMakeLists.txt
+++ b/src/unittest/CMakeLists.txt
@@ -15,6 +15,5 @@ include_directories(${GTEST_INCLUDE_DIRS})
 
 add_executable(${UNITTEST_APP} ${SRC_LIST})
 
-target_link_libraries(${UNITTEST_APP} LINK_PUBLIC common)
+target_link_libraries(${UNITTEST_APP} LINK_PUBLIC common gtest gtest_main)
 link_directories(${UNITTEST_APP} ${GTEST_LIBRARY_DIRS})
-target_link_libraries(${UNITTEST_APP} gtest gtest_main)
