added tokenDB class and create_token function implementation

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(abstraction)
 add_subdirectory(helper)
 add_subdirectory(command)
 add_subdirectory(parser)
+add_subdirectory(database)
 
 
 add_library(common ${SOURCE} ${HEADERS})
