Revert "Merge branch 'token_database' into 'develop'"
This reverts merge request !174

--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -18,15 +18,14 @@ add_subdirectory(abstraction)
 add_subdirectory(helper)
 add_subdirectory(command)
 add_subdirectory(parser)
-add_subdirectory(database)
 
 
 add_library(common ${SOURCE} ${HEADERS})
 
 find_package(Boost REQUIRED COMPONENTS thread system program_options filesystem iostreams)
-include_directories(common ${Boost_INCLUDE_DIRS} ${LMDB_INCLUDE_DIRS})
-link_directories(common ${Boost_LIBRARY_DIRS} ${LMDB_LIBRARIES})
-target_link_libraries(common ${Boost_LIBRARIES} lmdb)
+include_directories(common ${Boost_INCLUDE_DIRS})
+link_directories(common ${Boost_LIBRARY_DIRS})
+target_link_libraries(common ${Boost_LIBRARIES})
 
 
 target_include_directories(common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
