Change gcov output dir

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.links.issue=https://github.com/adshares/ads/issues
 
 # SQ standard properties
 sonar.cfamily.build-wrapper-output=bw_output
-sonar.cfamily.gcov.reportsPath=build
+sonar.cfamily.gcov.reportsPath=reports
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.exclusions=
