--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,11 +2,12 @@ cmake_minimum_required(VERSION 2.8)
 
 cmake_policy(SET CMP0015 NEW)
 cmake_policy(SET CMP0023 NEW)
+cmake_policy(SET CMP0048 NEW)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wextra")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -m64 -fPIC -Os -fno-strict-aliasing")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -m64 -fPIC -Os -fno-strict-aliasing")
 
 #set(Boost_USE_STATIC_LIBS   ON)
 
@@ -33,29 +34,32 @@ execute_process(
 execute_process(
   COMMAND git describe --tag --exact-match ${GIT_COMMIT_HASH}
   WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE PROJECT_VERSION
+  OUTPUT_VARIABLE GIT_PROJECT_VERSION
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+
+string(REGEX REPLACE "^v([0-9]+\\.[0-9]+\\.[0-9]+).*" "\\1" VERSION "${GIT_PROJECT_VERSION}")
 
 if(NOT CMAKE_PROJECT_CONFIG)
     set(CMAKE_PROJECT_CONFIG "ads")
 endif(NOT CMAKE_PROJECT_CONFIG)
 
-set(CONFIG_FILE "default_${CMAKE_PROJECT_CONFIG}.h.in")
+set(CONFIG_FILE "${CMAKE_CURRENT_SOURCE_DIR}/default_${CMAKE_PROJECT_CONFIG}.h.in")
 if(CMAKE_PROJECT_NAME)
-	project(${CMAKE_PROJECT_NAME})
+	project(${CMAKE_PROJECT_NAME} VERSION ${VERSION})
 else()
-	project(${CMAKE_PROJECT_CONFIG})
+	project(${CMAKE_PROJECT_CONFIG} VERSION ${VERSION})
 endif()
 
-if(EXISTS ${CONFIG_FILE})
+message("** PROJECT ${PROJECT_NAME} @ ${PROJECT_VERSION} : " ${CMAKE_BUILD_TYPE} " **")
+
+if(NOT EXISTS ${CONFIG_FILE})
     message(FATAL_ERROR "Configuration file ${CONFIG_FILE} not exists")
     return()
 endif()
 
 message("** PROJECT CONFIG: " ${CMAKE_PROJECT_CONFIG} " **")
 configure_file(${CONFIG_FILE} ${CMAKE_SOURCE_DIR}/common/default.h)
-message("BUILD_TYPE: " ${CMAKE_BUILD_TYPE} )
 
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     add_definitions(-DDEBUG)
@@ -74,8 +78,13 @@ add_subdirectory(esc)
 add_subdirectory(escd)
 add_subdirectory(tools)
 
-IF(${UNITTEST})
-    MESSAGE("\n\n***UNITTESTS ENABLED***\n\n\n")
+if(${UNITTEST})
+    message("\n\n***UNITTESTS ENABLED***\n\n\n")
     add_subdirectory(unittest)
-ENDIF(${UNITTEST})
+endif()
 
+set(CPACK_FILE "${CMAKE_CURRENT_SOURCE_DIR}/CPack_${CMAKE_PROJECT_CONFIG}.txt")
+if(EXISTS ${CPACK_FILE})
+    message("** CPACK CONFIG: " ${CPACK_FILE} " **")
+    include(${CPACK_FILE})
+endif()
