--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ install:
   - git clone https://github.com/adshares/ads-tests.git $TEST_DIR
   # DEV
   - git clone https://github.com/adshares/ads-dev-tools.git $ADS_DEV
+  - ./home/travis/adshares/ads-dev-tools/scripts/ads_compile
   - ls -al $ADS_DEV
   - ls -al $ADS_DEV/scripts
   # COMMON
