--- a/src/default_ads.h.in
+++ b/src/default_ads.h.in
@@ -39,30 +39,22 @@
 #endif
 
 #define TOTALMASS 3875820600000000000L /* total balance (target) */
-#define MAX_USERS 0x40000000L /* maximum number of users in a node (1G => size:16GB) */
-#define LOCK_TIME (BLOCKDIV*BLOCKSEC) /*time needed for lock to start; LOCK_TIME => allow withdrawal*/
+#define MAX_USERS 0x8000000L /* maximum number of users in a node (134M => size:16GB) */
+#define LOCK_TIME (BLOCKDIV*BLOCKSEC) /* 12 days; time needed for lock to start; LOCK_TIME => allow withdrawal*/
 
 //local parameters (office<->client), not part of network protocol
 #define SYNC_WAIT 8 /* wait before another attempt to download servers */
 #define MAX_CHECKQUE 8 /*maximum check queue size for emidiate message requests*/
-#define MAX_USER_QUEUE 0x10000 /* maximum number of accounts in create_account queue ("blacklist") */
-#define MIN_LOG_SIZE (4096+2048) /* when this log size is reached try purging */
-#define MAX_LOG_AGE (0x800*BLOCKSEC) /* purge first 4096 bytes if older than this age */
-#define MAX_BLG_SIZE 0x8FFFFFF0L /* blog size larger than this will not be submitted to clients */
+#define MAX_USER_QUEUE 10000L /* maximum number of accounts in create_account queue ("blacklist") */
+#define MIN_LOG_SIZE (4L*1024L*1024L) /* 4MB; when this log size is reached try purging */
+#define MAX_LOG_AGE (16384L*BLOCKSEC) /* 90 days; purge first 4096 bytes if older than this age */
+#define MAX_BLG_SIZE 10L*1024L*1024L /* 10 MB; blog size larger than this will not be submitted to clients */
 
 #define AMOUNT_DECIMALS 11
 
-//#define MIN_MSGNUM 2 /*minimum number of messages to prevent hallo world, change to higher number later*/
-//#define MAX_USRWAIT 64 /*wait no more than 64s for a usr file*/
-//#define MAXLOSS (BLOCKSEC*128) /*do not expect longer history from peers*/
-//#define VOTES_MAX 63
-//#define MAX_ELEWAIT (BLOCKSEC/2) /*wait no more than this for candidate votes, FIXME, + time after last vote*/
-//#define PATHSHIFT 8
-//#define PATHSHIFT 5
-
 #define SERVER_TYPE 1
-#define OFFICE_PORT "9091"
-#define SERVER_PORT "8081"
+#define OFFICE_PORT "6511"
+#define SERVER_PORT "6510"
 #ifdef DEBUG
 #define SERVER_DNSA "devseed.adshares.net"
 #else
@@ -71,8 +63,6 @@
 #define MAXCLIENTS 128
 
 #define USER_STAT_DELETED 0x1 /* account can be deleted and reused */
-
-#define ONE_YEAR (3600*24*365)
 
 #define TXS_MIN_FEE       10000L      //(0x1000) /* minimum fee per transaction */
 #define TXS_DIV_FEE       (20000000L)  //(0x100000)  /* dividend fee collected every BLOCKDIV blocks ( $0.1 / year ) */
