--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,23 +17,24 @@ if(UNIX AND NOT APPLE)
 endif()
 
 # Get version
-
-set(VERSION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/version")
-if(EXISTS ${VERSION_FILE})
-    file(READ ${VERSION_FILE} SRC_VERSION)
+if(NOT CMAKE_PROJECT_VERSION)
+	set(VERSION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/version")
+	if(EXISTS ${VERSION_FILE})
+	    file(READ ${VERSION_FILE} CMAKE_PROJECT_VERSION)
+	endif()
 endif()
 
-if(NOT SRC_VERSION)
+if(NOT CMAKE_PROJECT_VERSION)
     execute_process(
       COMMAND git describe --tags
       WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
       OUTPUT_VARIABLE GIT_PROJECT_VERSION
       OUTPUT_STRIP_TRAILING_WHITESPACE
     )
-    string(REGEX REPLACE "^v(.*)$" "\\1" SRC_VERSION "${GIT_PROJECT_VERSION}")
+    string(REGEX REPLACE "^v(.*)$" "\\1" CMAKE_PROJECT_VERSION "${GIT_PROJECT_VERSION}")
 endif()
 
-string(REGEX REPLACE "^([0-9]+\\.[0-9]+\\.[0-9]+).*" "\\1" PROJECT_VERSION "${SRC_VERSION}")
+string(REGEX REPLACE "^([0-9]+\\.[0-9]+\\.[0-9]+).*" "\\1" PROJECT_VERSION "${CMAKE_PROJECT_VERSION}")
 
 if(NOT CMAKE_PROJECT_CONFIG)
     set(CMAKE_PROJECT_CONFIG "ads")
@@ -46,7 +47,7 @@ else()
 	project(${CMAKE_PROJECT_CONFIG} VERSION ${PROJECT_VERSION})
 endif()
 
-message("** PROJECT ${PROJECT_NAME} ${SRC_VERSION} : " ${CMAKE_BUILD_TYPE} " **")
+message("** PROJECT ${PROJECT_NAME} ${CMAKE_PROJECT_VERSION} : " ${CMAKE_BUILD_TYPE} " **")
 
 if(NOT EXISTS ${CONFIG_FILE})
     message(FATAL_ERROR "Configuration file ${CONFIG_FILE} not exists")
