--- a/src/default_esc.h.in
+++ b/src/default_esc.h.in
@@ -2,7 +2,7 @@
 #define DEFAULT_H
 
 #define PROJECT_NAME "@PROJECT_NAME@"
-#define PROJECT_VERSION "@SRC_VERSION@"
+#define PROJECT_VERSION "@CMAKE_PROJECT_VERSION@"
 #define GIT_BRANCH "@GIT_BRANCH@"
 #define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
 
