--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,6 +32,7 @@ if(NOT CMAKE_PROJECT_VERSION)
       OUTPUT_STRIP_TRAILING_WHITESPACE
     )
     string(REGEX REPLACE "^v(.*)$" "\\1" CMAKE_PROJECT_VERSION "${GIT_PROJECT_VERSION}")
+    string(REGEX REPLACE "-" "+" CMAKE_PROJECT_VERSION "${CMAKE_PROJECT_VERSION}")
 endif()
 
 string(REGEX REPLACE "^([0-9]+\\.[0-9]+\\.[0-9]+).*" "\\1" PROJECT_VERSION "${CMAKE_PROJECT_VERSION}")
