Add test case dry_run

--- a/.travis.yml
+++ b/.travis.yml
@@ -82,7 +82,7 @@ jobs:
     - stage: test
       script:
         - $ADS_CONF && $ADS_START && cd $TEST_DIR
-        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @non_existent,@vip_key,@function"
+        - mvn clean test $TESTS_ARGS -Dcucumber.options="--tags @non_existent,@vip_key,@function,@dry_run"
     - stage: test
       script:
         - $ADS_CONF && $ADS_START && cd $TEST_DIR
