Change project name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.host.url=https://sonarcloud.io
 sonar.organization=adshares-github
 sonar.projectKey=adshares-ads
-sonar.projectName=ADS implementation of Enterprise Service Chain
+sonar.projectName=ADS Blockchain
 sonar.projectVersion=1.0.0-RC
 
 # =====================================================
