--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory(abstraction)
 add_subdirectory(helper)
 add_subdirectory(command)
 add_subdirectory(parser)
+add_subdirectory(utils)
 
 
 add_library(common ${SOURCE} ${HEADERS})
