--- a/src/default_ads.h.in
+++ b/src/default_ads.h.in
@@ -15,8 +15,8 @@
 #define MAX_MSGWAIT 0x2 /* start with 2 and change to 8: wait no more than 8s for a message */
 #define VOTE_DELAY 2 /*increase later (maybe monitor network delay)!!!*/
 #define VIP_MAX 7 /* maximum number of VIP servers */
-#define MIN_PEERS 8 /* keep at least 3 peers connected */
-#define MAX_PEERS 16 /* keep not more than 8 peers connected */
+#define MIN_PEERS 8 /* keep at least N peers connected */
+#define MAX_PEERS 16 /* keep not more than N peers connected */
 #define VALIDATORS 8 /* number of validator threads */
 #define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #define USER_MIN_AGE     (BLOCKSEC*2)
@@ -30,8 +30,8 @@
 #define MAX_MSGWAIT 0x10 /* wait no more than 16s for a message */
 #define VOTE_DELAY 4 /*increase later (maybe monitor network delay)!!!*/
 #define VIP_MAX 31 /* maximum number of VIP servers */
-#define MIN_PEERS 8 /* keep at least 8 peers connected */
-#define MAX_PEERS 16 /* keep not more than 16 peers connected */
+#define MIN_PEERS 16 /* keep at least N peers connected */
+#define MAX_PEERS 48 /* keep not more than N peers connected */
 #define VALIDATORS 8 /* number of validator threads */
 #define CLIENT_POOL 16	/* do not offer more threads that are used for network message validation */
 #define USER_MIN_AGE     (BLOCKSEC*10000L) /* wait at least 10000 blocks before deleting an account */
